--- a/homework-1-1.ipynb
+++ b/homework-1-1.ipynb
@@ -10,38 +10,236 @@
     "# Firstly, I will store the Cartesian coordinates for a few molecules from the CCCBDB database\n",
     "\n",
     "molecule_H2 = {\n",
-    "    \"H1\" = [0.0000, 0.0000, 0.0000]\n",
-    "    \"H2\" = [0.0000, 0.0000, 0.7414]\n",
+    "    \"H1\": [0.0000, 0.0000, 0.0000],\n",
+    "    \"H2\": [0.0000, 0.0000, 0.7414]\n",
     "}\n",
     "\n",
     "molecule_H2O = {\n",
-    "    \"H1\" = [0.0000, 0.7572, -0.4692]\n",
-    "    \"H2\" = [0.0000, -0.7572, -0.4692]\n",
-    "    \"O\"  = [0.0000, 0.0000, 0.1173]\n",
+    "    \"H1\": [0.0000, 0.7572, -0.4692],\n",
+    "    \"H2\": [0.0000, -0.7572, -0.4692],\n",
+    "    \"O\":  [0.0000, 0.0000, 0.1173]\n",
     "}\n",
     "\n",
     "molecule_benzene = {\n",
-    "    \"C1\" = [0.0000, 1.3970, 0.0000]\n",
-    "    \"C2\" = [1.2098, 0.6985, 0.0000]\n",
-    "    \"C3\" = [1.2098, -0.6985, 0.0000]\n",
-    "    \"C4\" = [0.0000, -1.3970, 0.0000]\n",
-    "    \"C5\" = [-1.2098, -0.6985, 0.0000]\n",
-    "    \"C6\" = [-1.2098, 0.6985, 0.0000]\n",
-    "    \"H7\" = [0.0000, 2.4810, 0.0000]\n",
-    "    \"H8\" = [2.1486, 1.2405, 0.0000]\n",
-    "    \"H9\" = [2.1486, -1.2405, 0.0000]\n",
-    "    \"H10\" = [0.0000, -2.4810, 0.0000]\n",
-    "    \"H11\" = [-2.1486, -1.2405, 0.0000]\n",
-    "    \"H12\" = [-2.1486, 1.2405, 0.0000]\n",
+    "    \"C1\": [0.0000, 1.3970, 0.0000],\n",
+    "    \"C2\": [1.2098, 0.6985, 0.0000],\n",
+    "    \"C3\": [1.2098, -0.6985, 0.0000],\n",
+    "    \"C4\": [0.0000, -1.3970, 0.0000],\n",
+    "    \"C5\": [-1.2098, -0.6985, 0.0000],\n",
+    "    \"C6\": [-1.2098, 0.6985, 0.0000],\n",
+    "    \"H7\": [0.0000, 2.4810, 0.0000],\n",
+    "    \"H8\": [2.1486, 1.2405, 0.0000],\n",
+    "    \"H9\": [2.1486, -1.2405, 0.0000],\n",
+    "    \"H10\": [0.0000, -2.4810, 0.0000],\n",
+    "    \"H11\": [-2.1486, -1.2405, 0.0000],\n",
+    "    \"H12\": [-2.1486, 1.2405, 0.0000]\n",
     "}\n",
     "\n",
-    "print(molecule_H2, molecule_H2O, molecule_benzene)\n"
+    "print(molecule_H2, molecule_H2O, molecule_benzene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "822f6d77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We can calculate the bond length between atoms using their Cartesian coordinates.\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "#We only want 6 values for the atoms, so we need an error if there is more/less than 6 values\n",
+    "input_var = input(\"Please enter the Cartesian coordinates of two atoms (x1 y1 z1 x2 y2 z2): \")\n",
+    "values = input_var.split()\n",
+    "if len(values) != 6:\n",
+    "    print(\"Error: Please enter exactly 6 values.\")\n",
+    "else:\n",
+    "    coords1 = tuple(map(float, values[:3]))\n",
+    "    coords2 = tuple(map(float, values[3:]))\n",
+    "\n",
+    "    def compute_bond_length(coords1, coords2):\n",
+    "        return math.sqrt((coords1[0] - coords2[0])**2 + (coords1[1] - coords2[1])**2 + (coords1[2] - coords2[2])**2)\n",
+    "    bond_length = compute_bond_length(coords1, coords2)\n",
+    "\n",
+    "    if bond_length >= 2:\n",
+    "        print(\"Error: The bond length is too large to be realistic.\")\n",
+    "    else:\n",
+    "        print(\"The length of the bonds is \" + str(bond_length) + \" Angstroms.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e583a2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This will calculate the bond angle of three atoms using user input\n",
+    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "#The dot product will calculate in radians, so we need some extra steps to get it in degrees\n",
+    "def compute_bond_angle(coord1, coord2, coord3):\n",
+    "    vector1 = coord1 - coord2\n",
+    "    vector2 = coord3 - coord2\n",
+    "    dot_product = np.dot(vector1, vector2)\n",
+    "    norm1 = np.linalg.norm(vector1)\n",
+    "    norm2 = np.linalg.norm(vector2)\n",
+    "    if norm1 == 0 or norm2 == 0:\n",
+    "        return None\n",
+    "    cos_angle = dot_product / (norm1 * norm2)\n",
+    "    angle_rad = np.arccos(cos_angle)\n",
+    "    angle_deg = np.degrees(angle_rad)\n",
+    "    return angle_deg\n",
+    "\n",
+    "#We need user input for the coordinates in the bond angle\n",
+    "input_str = input(\"Enter coordinates for three atoms (x1 y1 z1 x2 y2 z2 x3 y3 z3): \")\n",
+    "values = list(map(float, input_str.split()))\n",
+    "if len(values) != 9:\n",
+    "    print(\"Error: Please enter exactly 9 values.\")\n",
+    "else:\n",
+    "    coord1 = np.array(values[0:3])\n",
+    "    coord2 = np.array(values[3:6])\n",
+    "    coord3 = np.array(values[6:9])\n",
+    "    angle = compute_bond_angle(coord1, coord2, coord3)\n",
+    "    print(f\"Bond angle: {angle} degrees\")\n",
+    "    if angle < 90:\n",
+    "        print(\"The bond angle is acute.\")\n",
+    "    elif angle == 90:\n",
+    "        print(\"The bond angle is right.\")\n",
+    "    else:\n",
+    "        print(\"The bond angle is obtuse.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5115bf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now we can automatically calculate all bond lengths in a given molecule by calling on the compute_bond_lengths function\n",
+    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "#To start, this is the compute_bond_lengths function that I wrote earlier in this code\n",
+    "def compute_bond_length(coords1, coords2):\n",
+    "    return math.sqrt((coords1[0] - coords2[0])**2 + (coords1[1] - coords2[1])**2 + (coords1[2] - coords2[2])**2)\n",
+    "\n",
+    "#Now, we need to create a function that can sort all the coordinates into a list that we can use\n",
+    "def coord_sorter(input_str):\n",
+    "    coords = input_str.split()\n",
+    "    if len(coords) % 4 != 0:\n",
+    "        print(\"Error: Each atom should be listed with a unique ID and its x, y, z coordinates.\")\n",
+    "        return None\n",
+    "    molecule = {}\n",
+    "    for x in range(0, len(coords), 4):\n",
+    "        label = coords[x]\n",
+    "        coord_list = np.array(list(map(float, coords[x+1:x+4])))\n",
+    "        molecule[label] = coord_list\n",
+    "    return molecule\n",
+    "\n",
+    "#And now, we can sort through the list of coordinates to calculate each unique bond length using nested loops\n",
+    "def calculate_all_bond_lengths(molecule):\n",
+    "    atom_labels = list(molecule.keys())\n",
+    "    n = len(atom_labels)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            atom1 = atom_labels[i]\n",
+    "            atom2 = atom_labels[j]\n",
+    "            bond_length = compute_bond_length(molecule[atom1], molecule[atom2])\n",
+    "            print(f\"Bond length between {atom1} and {atom2}: {bond_length:.2f} Angstroms\")\n",
+    "\n",
+    "#And finally, just adding an input for the user to enter their own coordinates\n",
+    "input_str = input(\"Enter atom coordinates: \")\n",
+    "molecule = coord_sorter(input_str)\n",
+    "if molecule:\n",
+    "    calculate_all_bond_lengths(molecule)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dec9a348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We can also automatically calculate the bond angles of inputted coordinates\n",
+    "\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "#The compute_bond_angle function is coming back for round two\n",
+    "def compute_bond_angle(coord1, coord2, coord3):\n",
+    "    vector1 = coord1 - coord2\n",
+    "    vector2 = coord3 - coord2\n",
+    "    dot_product = np.dot(vector1, vector2)\n",
+    "    norm1 = np.linalg.norm(vector1)\n",
+    "    norm2 = np.linalg.norm(vector2)\n",
+    "    if norm1 == 0 or norm2 == 0:\n",
+    "        return None\n",
+    "    cos_angle = dot_product / (norm1 * norm2)\n",
+    "    angle_rad = np.arccos(cos_angle)\n",
+    "    angle_deg = np.degrees(angle_rad)\n",
+    "    return angle_deg\n",
+    "\n",
+    "#We can reuse the exact same coordinate sorter as before\n",
+    "def coord_sorter(input_str):\n",
+    "    coords = input_str.split()\n",
+    "    if len(coords) % 4 != 0:\n",
+    "        print(\"Error: Each atom should be listed with a unique ID and its x, y, z coordinates.\")\n",
+    "        return None\n",
+    "    molecule = {}\n",
+    "    for x in range(0, len(coords), 4):\n",
+    "        label = coords[x]\n",
+    "        coord_list = np.array(list(map(float, coords[x+1:x+4])))\n",
+    "        molecule[label] = coord_list\n",
+    "    return molecule\n",
+    "\n",
+    "#Most of the code can be the same, but we need to add another loop to account for the third set of coordinates\n",
+    "def calculate_all_bond_angles(molecule):\n",
+    "    atom_labels = list(molecule.keys())\n",
+    "    n = len(atom_labels)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            for k in range(j + 1, n):\n",
+    "                atom1 = atom_labels[i]\n",
+    "                atom2 = atom_labels[j]\n",
+    "                atom3 = atom_labels[k]\n",
+    "                bond_angle = compute_bond_angle(molecule[atom1], molecule[atom2], molecule[atom3])\n",
+    "                if bond_angle is None:\n",
+    "                    print(f\"Cannot calculate bond angle for {atom1}, {atom2}, {atom3}. (Vector is zero-length)\")\n",
+    "                elif abs(bond_angle - 90) < 1e-2:\n",
+    "                    print(\"The bond angle is right.\")\n",
+    "                elif bond_angle < 90:\n",
+    "                    print(\"The bond angle is acute.\")\n",
+    "                elif bond_angle < 180:\n",
+    "                    print(\"The bond angle is obtuse.\")\n",
+    "                else:\n",
+    "                    print(\"The bond angle is too large.\")\n",
+    "                print(f\"Bond angle between {atom1}, {atom2}, and {atom3}: {bond_angle:.2f} degrees\")\n",
+    "                print()\n",
+    "\n",
+    "#And again, we just need the user to input whatever coordinates they want\n",
+    "input_str = input(\"Enter atom coordinates: \")\n",
+    "molecule = coord_sorter(input_str)\n",
+    "if molecule:\n",
+    "    calculate_all_bond_angles(molecule)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
